# Baedeker

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/baedeker-cli/: Cargo.toml
crates/baedeker-cli/src/: main.rs
crates/baedeker-core/: Cargo.toml
crates/baedeker-core/src/: error.rs  lib.rs  types.rs
crates/baedeker-core/src/binary/: leb128.rs  mod.rs  module.rs  section.rs
crates/baedeker-testdata/: Cargo.toml  build.rs
crates/baedeker-testdata/fixtures/: add.rs  empty.rs  memory.rs
crates/baedeker-testdata/src/: lib.rs
docs/: ROADMAP.md
