[package]
name = "baedeker-core"
description = "WebAssembly runtime core — decode, validate, execute (no_std)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
std = []

[dependencies]

[dev-dependencies]
baedeker-testdata = { path = "../baedeker-testdata" }
